# cpplox

./: .clang-format  .clangd  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: main.cpp
src/lexer/: Token.cpp  Token.h  TokenType.h  lexer.cpp  lexer.h
test/: lexerTest.cpp
